--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
     
-    <title>React App</title>
+    <title>Patrick Dunn Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
